<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.client.sample</groupId>
	<artifactId>Sample-Nimble-Client</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<repositories>
		<repository>
			<id>my-local-repo</id>
			<url>file://${project.basedir}/libs</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>tech.viom</groupId>
			<artifactId>nimble</artifactId>
			<version>1.0.0</version>
			<!--<scope>system</scope>
			<systemPath>${project.basedir}/libs/nimble-1.0.0.jar</systemPath>-->
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>

				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M7</version>
				<configuration>
					<forkCount>1</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m --add-opens
						java.base/java.lang=ALL-UNNAMED --add-opens
						java.base/java.lang.reflect=ALL-UNNAMED</argLine>
					<suiteXmlFiles>
						<suiteXmlFile>testng.xml</suiteXmlFile>
					</suiteXmlFiles>
				</configuration>
				<!--
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M7</version>
				<configuration>
					<useSystemClassLoader>false</useSystemClassLoader>
					<redirectTestOutputToFile>true</redirectTestOutputToFile>
					<suiteXmlFiles>
						<suiteXmlFile>testng.xml</suiteXmlFile>
					</suiteXmlFiles>
				</configuration> -->
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
</project>